[project]
name = "julia"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "julia-common",
    "julia-log",
    "julia-rag",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
julia-common = { workspace = true }
julia-log = { workspace = true }
julia-rag = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["services/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.4",
]

[tool.pytest.ini_options]
pythonpath = [".", "packages/*/src"]
testpaths = [
    "**/tests",
]
